fix(traffic): make progress column visible

--- a/src/app/pages/e-commerce/traffic-reveal-card/front-side/traffic-bar/traffic-bar.component.scss
+++ b/src/app/pages/e-commerce/traffic-reveal-card/front-side/traffic-bar/traffic-bar.component.scss
@@ -34,6 +34,7 @@
     transform: rotate(180deg);
 
     .progress-line {
+      background-color: nb-theme(background-basic-color-4);
       width: 100%;
 
       &.success {
